# Example

./: CMakeLists.txt  README.txt  libminizip.lib  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mz.h  mz_strm.h  mz_zip_rw.h  tcontroller.cpp  tcontroller.h  tcustomtablemodel.cpp  tcustomtablemodel.h  tzipviewermodel.cpp  tzipviewermodel.h  zlibstaticd.lib  zstd_static.lib
